# esp32-modbus-manager

./: CMakeLists.txt  README.md
sql/: init.sql
src/: App.cpp
src/component/: AppComponent.hpp  DatabaseComponent.hpp  SwaggerComponent.hpp
src/controller/: AuthController.hpp  ModbusController.hpp  SwaggerController.hpp
src/db/: AuthDb.hpp  ModbusDb.hpp
src/dto/: AuthDto.hpp  DeviceDto.hpp  ModbusDto.hpp  StatusDto.hpp  UserDto.hpp
src/service/: AuthService.hpp  ModbusService.hpp
src/util/: ErrorHandler.cpp  ErrorHandler.hpp  HashUtils.hpp
